fix horizontal scroll

--- a/custom_css/style.css
+++ b/custom_css/style.css
@@ -51,6 +51,14 @@
 
   /* Horizontal Page Settings */
 
+body {
+  display: -ms-flexbox;
+  display: flex;
+  color: #fff;
+  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
+}
+
 /* manipulates width of horizontal scroll */
 .cover-container {
   max-width: 72em;
@@ -59,7 +67,6 @@
 .cover {
   padding: 0 1.5rem;
 }
-
 .cover .btn-lg {
   padding: 0.75rem 1.25rem;
   font-weight: 700;
